[build-system]
requires = [ "setuptools>=41.0.1",]

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "kitware", "gitlab", "purepy", "cv2",]
mod_name = "netharn"
description = "Train and deploy pytorch models"
repo_name = "netharn"
rel_mod_parent_dpath = "."
ci_cpython_versions = ["3.7", "3.8", "3.9", "3.10"]
os = [ "linux", "win", "all", "osx",]
min_python = 3.7
author = 'Jon Crall'
author_email = 'jon.crall@kitware.com'
url = 'https://gitlab.kitware.com/computer-vision/netharn'
dev_status = "beta"
typed = false

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "netharn/__main__.py", "*/setup.py",]
